--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
 {
+  "name": "nibbles",
+  "scripts": {
+    "build": "npx tsc"
+  },
   "devDependencies": {
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "@types/node": "^20.10.6",
+    "@types/yargs": "^17.0.32",
+    "yargs": "^17.7.2"
   }
 }
